objects/Risk_Penalty__c.object
<CustomObject>
    <description>Risk &amp; Penalties</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Risks &amp; Penalties</relationshipLabel>
        <relationshipName>Risks_Penalties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accrual_Amount__c</fullName>
        <inlineHelpText>Please enter the value in $ for the amount of the accrual.</inlineHelpText>
        <label>Accrual Amount ($) (Only T Russell)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accrual_done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Accrual done Yes/No</description>
        <inlineHelpText>Accrual done Yes/No</inlineHelpText>
        <label>Accrual done (Only T Russell)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Biz_Type__c</fullName>
        <description>Is this risk affecting our current biz (Defensive) or potential incremental biz (Incremental)?</description>
        <inlineHelpText>Is this risk affecting our current biz (Defensive) or potential incremental biz (Incremental)?</inlineHelpText>
        <label>Biz Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defensive</fullName>
                </value>
                <value>
                    <fullName>Incremental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_code__c</fullName>
        <inlineHelpText>Company code, 4 digits.  This can be found in FIS, it is the 4 digit number that prefixes the customer account number.</inlineHelpText>
        <label>Company code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Country code of the entity that has issued the invoice.</description>
        <inlineHelpText>Country code of the entity that has issued the invoice.</inlineHelpText>
        <label>Country Code (Invoice)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AE    UAE</fullName>
                </value>
                <value>
                    <fullName>AM    ARMENIA</fullName>
                </value>
                <value>
                    <fullName>AT     AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AU    AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AZ     AZERBIAJAN</fullName>
                </value>
                <value>
                    <fullName>BA    BOSNIA/HERZEGOV</fullName>
                </value>
                <value>
                    <fullName>BD    BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BE    BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BG   BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BH    BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BY    BELARUS</fullName>
                </value>
                <value>
                    <fullName>CG   CONGO</fullName>
                </value>
                <value>
                    <fullName>CH   SWITZERLAND</fullName>
                </value>
                <value>
                    <fullName>CM   CAMEROON</fullName>
                </value>
                <value>
                    <fullName>CZ    CZECH REP</fullName>
                </value>
                <value>
                    <fullName>DE   GERMANY</fullName>
                </value>
                <value>
                    <fullName>DK   DENMARK</fullName>
                </value>
                <value>
                    <fullName>DO   DOMINICAN REPUB</fullName>
                </value>
                <value>
                    <fullName>DZ    ALGERIA</fullName>
                </value>
                <value>
                    <fullName>EE   ESTONIA</fullName>
                </value>
                <value>
                    <fullName>EG   EGYPT</fullName>
                </value>
                <value>
                    <fullName>ES    SPAIN</fullName>
                </value>
                <value>
                    <fullName>ET   ETHIOPIA</fullName>
                </value>
                <value>
                    <fullName>FI     FINLAND</fullName>
                </value>
                <value>
                    <fullName>FR   FRANCE</fullName>
                </value>
                <value>
                    <fullName>GA   GABON</fullName>
                </value>
                <value>
                    <fullName>GB   UNITED KINGDOM</fullName>
                </value>
                <value>
                    <fullName>GE   GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GH   GHANA</fullName>
                </value>
                <value>
                    <fullName>GR   GREECE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_code_Product__c</fullName>
        <description>Enter the country code of the entity where the product has been produced.</description>
        <inlineHelpText>Enter the country code of the entity where the product has been produced.</inlineHelpText>
        <label>Country code (Product)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DZ    ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AM    ARMENIA</fullName>
                </value>
                <value>
                    <fullName>AU    AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AT     AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZ     AZERBIAJAN</fullName>
                </value>
                <value>
                    <fullName>BH    BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BD    BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BY    BELARUS</fullName>
                </value>
                <value>
                    <fullName>BE    BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BA    BOSNIA/HERZEGOV</fullName>
                </value>
                <value>
                    <fullName>BG   BULGARIA</fullName>
                </value>
                <value>
                    <fullName>CM   CAMEROON</fullName>
                </value>
                <value>
                    <fullName>CG   CONGO</fullName>
                </value>
                <value>
                    <fullName>HR   CROATIA</fullName>
                </value>
                <value>
                    <fullName>CZ    CZECH REP</fullName>
                </value>
                <value>
                    <fullName>DK   DENMARK</fullName>
                </value>
                <value>
                    <fullName>DO   DOMINICAN REPUB</fullName>
                </value>
                <value>
                    <fullName>EG   EGYPT</fullName>
                </value>
                <value>
                    <fullName>EE   ESTONIA</fullName>
                </value>
                <value>
                    <fullName>ET   ETHIOPIA</fullName>
                </value>
                <value>
                    <fullName>FI     FINLAND</fullName>
                </value>
                <value>
                    <fullName>FR   FRANCE</fullName>
                </value>
                <value>
                    <fullName>GA   GABON</fullName>
                </value>
                <value>
                    <fullName>GE   GEORGIA</fullName>
                </value>
                <value>
                    <fullName>DE   GERMANY</fullName>
                </value>
                <value>
                    <fullName>GH   GHANA</fullName>
                </value>
                <value>
                    <fullName>GR   GREECE</fullName>
                </value>
                <value>
                    <fullName>HU   HUNGARY</fullName>
                </value>
                <value>
                    <fullName>IN     INDIA</fullName>
                </value>
                <value>
                    <fullName>IR     IRAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department in ELT who needs to take countermeasures to remove the risk</description>
        <inlineHelpText>Department in ELT who needs to take countermeasures to remove the risk</inlineHelpText>
        <label>Department (ELT)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning (Nadege Magnien)</fullName>
                </value>
                <value>
                    <fullName>Finance (Susanne Kueppers or Tony Russell)</fullName>
                </value>
                <value>
                    <fullName>Human Ressources (Joke van Acke)</fullName>
                </value>
                <value>
                    <fullName>Lean PD (John Stoker)</fullName>
                </value>
                <value>
                    <fullName>Operations (Johann Meyer)</fullName>
                </value>
                <value>
                    <fullName>Product Management HV (Robert Strobl)</fullName>
                </value>
                <value>
                    <fullName>Product Management non HV (Frank Drumm)</fullName>
                </value>
                <value>
                    <fullName>Sales (Andrew Jones)</fullName>
                </value>
                <value>
                    <fullName>Supply (Johann Meyer)</fullName>
                </value>
                <value>
                    <fullName>Purchasing (Fabrice Chazee)</fullName>
                </value>
                <value>
                    <fullName>PMO (Mark Westen)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description  of possible outflows with uncertain outcomes (Reason)</description>
        <inlineHelpText>Description  of possible outflows with uncertain outcomes (Reason)</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Expiry date of the liability</description>
        <inlineHelpText>Expiry date of the liability</inlineHelpText>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FY_TBR__c</fullName>
        <description>The fiscal year TBR that the values were entered in.</description>
        <inlineHelpText>Please select the fiscal year TBR rate the values are in.</inlineHelpText>
        <label>FY TBR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 tbr</fullName>
                </value>
                <value>
                    <fullName>FY13 tbr</fullName>
                </value>
                <value>
                    <fullName>FY14 tbr</fullName>
                </value>
                <value>
                    <fullName>FY15 tbr</fullName>
                </value>
                <value>
                    <fullName>FY16 tbr</fullName>
                </value>
                <value>
                    <fullName>FY17 tbr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the Legal Department been informed of this Risk / Penalty?</description>
        <inlineHelpText>Has the Legal Department been informed of this Risk / Penalty? if so, please tick the box.  If not, please leave blank.</inlineHelpText>
        <label>Legal Dept. informed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_level__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this risk under legal process?</description>
        <inlineHelpText>Is this risk under legal process?</inlineHelpText>
        <label>Legal level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_likely_outcome__c</fullName>
        <description>Most likely outcome  USD</description>
        <inlineHelpText>Most likely outcome  USD</inlineHelpText>
        <label>Penalty amount (most likely outcome)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outcomes_local_cur__c</fullName>
        <description>Max.amount of possible  uncertain outcomes</description>
        <inlineHelpText>Max.amount of possible  uncertain outcomes</inlineHelpText>
        <label>Max amount of uncertain outcomes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this Penalty been paid.  If yes, please select Checked and if not, please select unchecked.</description>
        <inlineHelpText>Has this Penalty been paid.  If yes, please select Checked and if not, please select unchecked.</inlineHelpText>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probability_2__c</fullName>
        <description>Please enter a percentage between 0-100%.</description>
        <inlineHelpText>Please enter a percentage between 0-100%.</inlineHelpText>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>Probability to occur: (0-25%, 26-50%, 51-75%,76-100% )</description>
        <inlineHelpText>Probability to occur: (0-25%, 26-50%, 51-75%,76-100% )</inlineHelpText>
        <label>Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-25%</fullName>
                </value>
                <value>
                    <fullName>26-50%</fullName>
                </value>
                <value>
                    <fullName>51-75%</fullName>
                </value>
                <value>
                    <fullName>76-100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_LineGroup__c</fullName>
        <label>Product LineGroup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>Connectors &amp; Fittings</fullName>
                </value>
                <value>
                    <fullName>Global High Voltage</fullName>
                </value>
                <value>
                    <fullName>Insulation &amp; Protection</fullName>
                </value>
                <value>
                    <fullName>Metering &amp; Smart Grid</fullName>
                </value>
                <value>
                    <fullName>Dorman Smith</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMPACT</fullName>
                </value>
                <value>
                    <fullName>AMP Misc</fullName>
                </value>
                <value>
                    <fullName>Area Lighting Research</fullName>
                </value>
                <value>
                    <fullName>B&amp;H Accessories</fullName>
                </value>
                <value>
                    <fullName>B&amp;H Connectors</fullName>
                </value>
                <value>
                    <fullName>CI Range</fullName>
                </value>
                <value>
                    <fullName>CLP-Installation Service</fullName>
                </value>
                <value>
                    <fullName>Commerical Product Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>Commerical Product Con &amp;  Fittings</fullName>
                </value>
                <value>
                    <fullName>Commerical Product HV</fullName>
                </value>
                <value>
                    <fullName>Commerical Product Ins &amp; Prot</fullName>
                </value>
                <value>
                    <fullName>Commerical Product MSG</fullName>
                </value>
                <value>
                    <fullName>Crompton Analogue</fullName>
                </value>
                <value>
                    <fullName>Crompton Difital (incl. CI Range)</fullName>
                </value>
                <value>
                    <fullName>Crompton Electronic</fullName>
                </value>
                <value>
                    <fullName>CTs</fullName>
                </value>
                <value>
                    <fullName>Distribution Automation</fullName>
                </value>
                <value>
                    <fullName>Distributor Bonus</fullName>
                </value>
                <value>
                    <fullName>Dorman Smith FBA</fullName>
                </value>
                <value>
                    <fullName>Dorman Smith Loose Gear</fullName>
                </value>
                <value>
                    <fullName>Dorman Smith Modis</fullName>
                </value>
                <value>
                    <fullName>Dulmison Business</fullName>
                </value>
                <value>
                    <fullName>Dulmison Insulators</fullName>
                </value>
                <value>
                    <fullName>GURO Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>Guro Insulating Materials</fullName>
                </value>
                <value>
                    <fullName>Guro Street Lighting</fullName>
                </value>
                <value>
                    <fullName>Hellstern</fullName>
                </value>
                <value>
                    <fullName>HV Arrester</fullName>
                </value>
                <value>
                    <fullName>HV Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>HV Comp/Axicom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Management</label>
        <referenceTo>Product_Management__c</referenceTo>
        <relationshipLabel>Risks &amp; Penalties</relationshipLabel>
        <relationshipName>Risks_Penalties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q1_current_FY__c</fullName>
        <label>Q1 current FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_current_FY__c</fullName>
        <label>Q2 current FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_current_FY__c</fullName>
        <label>Q3 current FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>In what Quarter, when expected to occur within 0-1 year.</description>
        <inlineHelpText>In what Quarter, when expected to occur within 0-1 year.</inlineHelpText>
        <label>Quarter( only 0-1 year)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>When__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
                <value>
                    <fullName>All Fiscal Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSD_Region__c</fullName>
        <label>RSD Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIS/RUSSIA</fullName>
                </value>
                <value>
                    <fullName>GERMANY</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>NORDIC</fullName>
                </value>
                <value>
                    <fullName>EAST EUROPE</fullName>
                </value>
                <value>
                    <fullName>MEA</fullName>
                </value>
                <value>
                    <fullName>FRANCE</fullName>
                </value>
                <value>
                    <fullName>SWITZERLAND</fullName>
                </value>
                <value>
                    <fullName>UK, SPAIN &amp; BENELUX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Type__c</fullName>
        <label>Risk Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Penalties on late deliveries</fullName>
                </value>
                <value>
                    <fullName>Penalty on technical failure (in TECHs)</fullName>
                </value>
                <value>
                    <fullName>Risk due to late deliveries</fullName>
                </value>
                <value>
                    <fullName>Risk due to cowntry of Origin</fullName>
                </value>
                <value>
                    <fullName>Risk due to missing qualification</fullName>
                </value>
                <value>
                    <fullName>Risk due to Economical drop</fullName>
                </value>
                <value>
                    <fullName>Risk due to TE product end of life</fullName>
                </value>
                <value>
                    <fullName>Risk due to missing ressources</fullName>
                </value>
                <value>
                    <fullName>Risk due to original Plan too optimistic</fullName>
                </value>
                <value>
                    <fullName>Risk due to Quality</fullName>
                </value>
                <value>
                    <fullName>Risk due to Price</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Please select OPEN or CLOSED depending on the status of the Penalty.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Please either select &quot;Business in risk&quot; or &quot;Penalty&quot;.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business at risk</fullName>
                </value>
                <value>
                    <fullName>Penalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updates__c</fullName>
        <description>Please provide updates on monthly basis</description>
        <inlineHelpText>Please provide updates on monthly basis</inlineHelpText>
        <label>Updates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <description>When is the outcome expected to occur: ( 0-1 year, 1-2years, &gt;2 years )</description>
        <inlineHelpText>When is the outcome expected to occur: ( 0-1 year, 1-2years, &gt;2 years )</inlineHelpText>
        <label>When?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-1 year</fullName>
                </value>
                <value>
                    <fullName>1-2years</fullName>
                </value>
                <value>
                    <fullName>&gt;2 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>World_Wide_Account_Number__c</fullName>
        <description>World wide Account number</description>
        <label>World Wide Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yearly_biz_impacted__c</fullName>
        <description>Indicate the amount this risk could affect our biz (current our future) per year. Consider the TOTAL impact: if you believe that we have a risk to loose the customer, then indicate the yearly turnover done with this customer.</description>
        <inlineHelpText>Indicate the amount this risk could affect our biz (current our future) per year. Consider the TOTAL impact: if you believe that we have a risk to loose the customer, then indicate the yearly turnover done with this customer.</inlineHelpText>
        <label>Yearly biz impacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_biz_risk_weighted__c</fullName>
        <formula>Yearly_biz_impacted__c *  Probability_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly biz risk weighted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Risk &amp; Penalty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Risk</fullName>
        <columns>Most_likely_outcome__c</columns>
        <columns>Yearly_biz_impacted__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Yearly_biz_risk_weighted__c</columns>
        <columns>Probability_2__c</columns>
        <columns>Risk_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Product_LineGroup__c</columns>
        <columns>Department__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Biz_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Risk</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Risk &amp; Penalty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks &amp; Penalties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>